fixed the height of the service section and the gap between the image and table in the schedule section

--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ header #menu a:hover {
 
 
 #services {
-    height: 900px;
+    height: 600px;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -246,7 +246,7 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    gap: 20px;
+    gap: 100px;
 
 }
 
@@ -255,7 +255,7 @@ button:hover {
 }
 .fadding-image {
     display: block;
-    width: 600px;
+    width: 700px;
     height: auto;
 }
 
